Homework_04/testresults.txt
.
.
does not compile, 6 errors you need to fix before I can evaluate
.
.
Clock.java:62: error: not a statement
      double this.angle = 0.0;
      ^
Clock.java:62: error: ';' expected
      double this.angle = 0.0;
            ^
ClockSolver.java:16: error: not a statement
     double this.angle = 0.0;
     ^
ClockSolver.java:16: error: ';' expected
     double this.angle = 0.0;
           ^
ClockSolver.java:17: error: not a statement
     double this.timeSlice = 3;
     ^
ClockSolver.java:17: error: ';' expected
     double this.timeSlice = 3;
           ^
6 errors

In addition, when I fix those 6 errors and recompile, there are
a total of 45 more that show up.

Anthony, you really need to make sure your code compiles before
you commit.  There's nothing I can do with the evaluation if the
code doesn't compile.  This was updated tonight, 2018-03-20 at
10:15 PM so I'm sure I have the latest that you have committed to
your repository.

Sorry.
